# fastapi-batch-inference-test

./: README.md  pyproject.toml
fastapi_batch_inference_test/: main.py
load_test/: locustfile.py
