[tool.poetry]
name = "fastapi-batch-inference-test"
version = "0.1.0"
description = ""
authors = ["Daisuke Hashimoto <galapagosit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
locust = "^2.32.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
